aneesh/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: dapp
spec:
  selector:
    matchLabels:
      name: app
  template:
    metadata:
      labels:
        name: app
    spec:
      containers:
      - name: con1
        image: nginx:latest
        ports:
        - containerPort: 80
