aneesh/nginx-secret.yaml
apiVersion: v1
kind: Pod
metadata:
   name: appsecret
   labels:
      app: mydb
spec:
   containers:
   - name: con1
     image: mysql:5.7
     ports:
     - containerPort: 3306
