aneesh/pvc-pod.yaml
apiVersion: v1
kind: Pod
metadata:
   name: pvcpod
   labels:
      app: myapp
spec:
   containers:
   - name: con1 
     image: nginx:latest
     ports:
     - containerPort: 80
     volumeMounts:
     - name: myvol
       mountPath: /data
   volumes:
   - name: myvol
     persistentVolumeClaim:
       claimName: mypvc
