aneesh/liveness-exec.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydepexe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mydep
  template:
    metadata:
      labels:
        app: mydep
    spec:
      containers:
      - name: con1
        image: nginx:latest
        ports:
        - containerPort: 80
        livenessProbe:
          exec:
            command:
            - cat 
            - /usr/share/nginx/html/index.htmmm
          initialDelaySeconds: 10
          periodSeconds: 5
      - name: con2
        image: tomcat:latest
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: mydep-svc
spec:
  type: NodePort
  selector:
    app: mydep
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30123
