aneesh/mysql.yaml
apiVersion: v1
kind: Pod
metadata:
   name: mysql
   labels:
      app: mydb
spec:
   containers:
   - name: con1
     image: mysql:5.7
     ports:
     - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
spec:
  type: ClusterIP
  selector:
    app: mydb
  ports:
  - port: 3306
    targetPort: 3306
