aneesh/wordpress.yaml
apiVersion: v1
kind: Pod
metadata:
   name: wordpress
   labels:
      app: myapp
spec:
   containers:
   - name: con1 
     image: wordpress:latest
     ports:
     - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc
spec:
  type: NodePort
  selector:
    app: myapp
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30123
